--- a/WebsiteBanGiayDep23/WebsiteBanGiayDep23.csproj
+++ b/WebsiteBanGiayDep23/WebsiteBanGiayDep23.csproj
@@ -3556,12 +3556,12 @@
     <Content Include="Views\Account\Profile.cshtml" />
     <Content Include="Views\Review\Partial_Review.cshtml" />
     <Content Include="Views\Review\Partial_Load_Review.cshtml" />
+    <Content Include="Views\Wishlist\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Content\ckfinder\userfiles\" />
-    <Folder Include="Views\Wishlist\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
