--- a/WebsiteBanGiayDep23/bin/WebsiteBanGiayDep23.dll.config
+++ b/WebsiteBanGiayDep23/bin/WebsiteBanGiayDep23.dll.config
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<add key="PasswordEmail" value="ymbrwrctvxazgcxo" /> <!--chưa đặt mật khẩu bảo vệ riêng của gg-->
 	<add key="Email" value="xingau2708@gmail.com" />
-	<add key="EmailAdmin" value="nguyenphamthanhhoang2708@gmail.com" />
+	<add key="EmailAdmin" value="xingau2708@gmail.com" />
   
 	<!--Cấu hình thanh toán vnpay-->
 	  <add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
